加上之前的和10月第二周的问题

--- a/9.1/210903.组会.md
+++ b/9.1/210903.组会.md
@@ -2,4 +2,42 @@
 
 ## 问题
 
-1. 
+### barcode x te矩阵的数据存储结构
+
+1. 使用两个字典嵌套，第一层是6000个barcode，第二层是1300个te
+
+   其中第二层1300个te的字典，是用copy.deepcopy进行拷贝的
+
+```
+te_matrix={'AAA':{'L1':0,'L2':1,...},'BBB':{'L1':0,'L2':1,...},
+					'CCC':{'L1':0,'L2':1,...},...}
+```
+
+2. 使用pandas的dataframe。初始化行为空，列是每一个subfamily；然后每读到一个barcode如果还未出现过，则dataframe添加一行。
+
+### 普通数据没有基因的tsne如何展示结果
+
+1. cellranger结果有根据基因做出的tsne图之类的话，需要基因的统计结果矩阵，我们自己根据基因统计结果去做tsne
+
+## 解决
+
+### barcode x te矩阵的数据存储结构
+
+1. samtools根据barcode进行排序
+   1. samtools barcode sorting
+
+### 普通数据没有基因的tsne如何展示结果
+
+1. 用提供的cell x gene矩阵
+
+## 完成
+
+1. 把构建index的部分分开了，现在是先进行TECT_build，用python的pickle包将数据存储成二进制那种，然后在count部分，读取index文件，不用每次比对
+2. 学习git
+3. 更改细胞、te矩阵数据的存储结构
+4. 跑esc细胞结果
+
+<img src="https://tva1.sinaimg.cn/large/008i3skNly1gu72fgkszrj60u00ub11t02.jpg" alt="image-20210906180535509" style="zoom: 25%;" />
+
+1. 数据真实，不能抄袭（重复率要低）
+2. 
