--- a/10.2/数据信息及处理过程.md
+++ b/10.2/数据信息及处理过程.md
@@ -27,10 +27,10 @@
    2. 跑
 
       ```
-      nohup cellranger count --id=hESC \
+      nohup cellranger count --id=hPSC \
       --transcriptome=/data/tmp_data/data/yzf/reference/refdata-gex-GRCh38-2020-A \
-      --fastqs=/data/tmp_data/data/yzf/data/211006.hESC \
-      --sample=hESC &
+      --fastqs=/data/tmp_data/data/yzf/data/211006.hPSC \
+      --sample=hPSC &
       ```
 
    3. 网页展示结果中，fraction in cells为58.9%，小于理想值70%
@@ -46,4 +46,10 @@
    ```
 
    ![image-20211009103229272](https://tva1.sinaimg.cn/large/008i3skNly1gv8us5d5nnj61uo068tb502.jpg)
+   
+   <font color='green'>过滤无CB读数</font>
+   
+   过滤了没有CB标签的读数，然后用之前的程序拿了1000000行的测试数据去跑，发现小量测试数据跑出来是18000个细胞，而cellranger的全部数据细胞计数结果是9000个细胞；仔细查看cellranger结果发现是它过滤了UMI低于500的细胞。
+   可能是新数据有的barcode的umi太少了不能当作正常细胞。
+   更改下程序，看每个barcode的UMI数如果少于500就把那个barcode对应的细胞当作background给过滤掉。
 
